--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.2.0
+  11-08-19
+  Development: Feature #29111 - compatibility to tt_news 3.0.*
+
 0.1.2
   10-12-28
   Improvement: The manual is extended with the sample "Display news of the current day only"
