ChangeLog more precisely
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/ttnewsselectconf/trunk@57396 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.2.3
   12-02-02
   Bugfixing: issue #33578 - Automatic detection of tt_news version replaced by manual detection
+							Processing only if there is an andWhere configured
 
 0.2.2
   11-12-06
